# pokeapi-observability-tests

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TASK_3.1_IMPLEMENTATION.md  TASK_3.1_TEST_RESULTS.md  TASK_5_IMPLEMENTATION_SUMMARY.md  TASK_7_IMPLEMENTATION_SUMMARY.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.kiro/hooks/: post-commit-github-sync.kiro.hook
.kiro/specs/pokeapi-observability-tests/: design.md  requirements.md  tasks.md
config/grafana/dashboards/: .gitkeep
config/grafana/provisioning/datasources/: datasources.yml
config/loki/: loki-config.yml
config/prometheus/: alerting_rules.yml  prometheus.yml
config/promtail/: promtail-config.yml
docker/postgres/: init.sql
docs/: DOCKER_INFRASTRUCTURE.md  TASK_2_SUMMARY.md
scripts/: quick-start.sh  run-property-tests.sh  validate-docker-compose.sh  validate-test-setup.sh
tests/: README.md  conftest.py
tests/api/: README.md  __init__.py  client.py  endpoints.py
tests/models/: __init__.py  ability.py  pokemon.py  type.py
tests/property/: README.md  RUNNING_TESTS.md  TASK_3.1_SUMMARY.md  test_database_module.py  test_properties_storage.py
tests/unit/: test_api_client.py  test_schema_tracker.py  test_schema_tracker_integration.py
tests/utils/: __init__.py  circuit_breaker.py  database.py  rate_limiter.py  schema_tracker.py
